--- a/Prototipos/Tela Inicial/index.html
+++ b/Prototipos/Tela Inicial/index.html
@@ -67,6 +67,9 @@
             <div class="quarto">
                 <h4 class="desocupado">Quarto 14</h4>
             </div>
+            <div class="quarto">
+                <h4 class="desocupado">Quarto 15</h4>
+            </div>
         </div>
         <div class="categoria" id="suite">
             <h1>Quartos Suite</h1>
