--- a/Prototipos/Tela Inicial/index.html
+++ b/Prototipos/Tela Inicial/index.html
@@ -20,6 +20,7 @@
         </ul>
     </nav>
     <div id="conteudo">
+        <h1>Pesquisa Rápida</h1>
         <div id="pesquisa">
             <label>Quantidade de Pessoas
                 <input type="number" id="quantidadePessoas" />
@@ -30,6 +31,7 @@
             <label>Data de Termino
                 <input type="date" id="dataTermino" />
             </label>
+            <button id="botaoPesquisa"></button>
         </div>
         <div class="categoria" id="pedidos-especiais">
             <h1>Pedidos Especiais</h1>
@@ -148,7 +150,6 @@
                 </div>
             </div>
         </div>
-
 </body>
 
 </html>
