--- a/Prototipos/Tela Calendario/index.html
+++ b/Prototipos/Tela Calendario/index.html
@@ -1,41 +1,29 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="fullcalendar/fullcalendar.css" />
-    <script src="fullcalendar/lib/jquery.min.js"></script>
-    <script src="fullcalendar/lib/moment.min.js"></script>
-    <script src="fullcalendar/fullcalendar.js"></script>
 
-    <head></head>
-    <script>
-        $(document).ready(function () {
-
-            // page is now ready, initialize the calendar...
-
-            $('#calendar').fullCalendar({
-
-                header: {
-                    left: 'prev,next today',
-                    center: 'title',
-                    right: 'agendaWeek'
-                },
-                dayClick: function (date, jsEvent, view) {
-                    alert('Clicked on: ' + date.format());
-                },
-                defaultDate: '11-12-2014',
-                businessHours: false, // display business hours
-            });
-
-        });
-    </script>
-    <title>
-        Linha do Tempo
-    </title>
+    <link rel="stylesheet" href="http://cdn.datatables.net/1.10.4/css/jquery.dataTables.css">
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="http://cdn.datatables.net/1.10.4/js/jquery.dataTables.min.js"></script>
+    <script src="index.js"></script>
+    <link rel="style.css"></link>
 </head>
 
-<body>
-    <div id="calendar"></div>
-</body>
+
+
+<table id="example" class="display" cellspacing="0" width="100%" on>
+    <thead>
+        <tr id="Dias">
+            <td>acomodacoes</td>
+        </tr>
+    </thead>
+
+    <tbody id="acomodacoes">
+        <tr>
+
+        </tr>
+    </tbody>
+</table>
 
 
 </html>
