Criação de Acomodações automatica Javascript e Angular

--- a/Prototipos/Tela Inicial/index.html
+++ b/Prototipos/Tela Inicial/index.html
@@ -1,8 +1,12 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <title>Qualiom - Hotel</title>
+    <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="js/funcionalidade.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script id="jsConteudo" type="text/javascript" src=""></script>
 </head>
 
 <body>
@@ -20,136 +24,7 @@
         </ul>
     </nav>
     <div id="conteudo">
-        <h1>Pesquisa Rápida</h1>
-        <div id="pesquisa">
-            <label>Quantidade de Pessoas
-                <input type="number" id="quantidadePessoas" />
-            </label>
-            <label>Data de Inicio
-                <input type="date" id="dataInicio" />
-            </label>
-            <label>Data de Termino
-                <input type="date" id="dataTermino" />
-            </label>
-            <button id="botaoPesquisa"></button>
-        </div>
-        <div class="categoria" id="pedidos-especiais">
-            <h1>Pedidos Especiais</h1>
-            <div class="acomodacao">
-                <h4 class="ocupado">Quarto 1</h4>
-                <div class="pedidoEspecial"><span title="Pedido Especial">!</span>
-                </div>
-                <div class="dadosCliente">
-                    <span>José Augusto Batista Neto</span>
-                    <br/>
-                    <span><b>19/11/2014 à 22/11/2014</b></span>
-                </div>
-            </div>
-        </div>
-        <div class="acomodacao">
-            <h4 class="ocupado">Quarto 2</h4>
-            <div class="pedidoEspecial"><span title="Pedido Especial">!</span>
-            </div>
-            <div class="dadosCliente">
-                <span>Marcello Victor</span>
-                <br/>
-                <span><b>19/11/2014 à 30/11/2014</b></span>
-            </div>
-        </div>
-        <div class="categoria" id="check-in-check-out">
-            <h1>Check-in / Check-out</h1>
-            <div class="acomodacao">
-                <h4 class="desocupado">Quarto 8</h4>
-                <div class="dadosCliente">
-                    <span>Disponivel</span>
-                    <br/>
-                    <span><b></b></span>
-                </div>
-            </div>
-            <div class="acomodacao">
-                <h4 class="desocupado">Quarto 9</h4>
-                <div class="dadosCliente">
-                    <span>Disponivel</span>
-                    <br/>
-                    <span><b></b></span>
-                </div>
-            </div>
-            <div class="acomodacao">
-                <h4 class="ocupado">Quarto 10</h4>
-                <div class="dadosCliente">
-                    <span>Pedro Alberto</span>
-                    <br/>
-                    <span><b>19/11/2014 à 27/11/2014</b></span>
-                </div>
-            </div>
-            <div class="acomodacao">
-                <h4 class="desocupado">Quarto 11</h4>
-                <div class="dadosCliente">
-                    <span>Disponivel</span>
-                    <br/>
-                    <span><b></b></span>
-                </div>
-            </div>
-            <div class="acomodacao">
-                <h4 class="ocupado">Quarto 12</h4>
-                <div class="dadosCliente">
-                    <span>Adriano Felipe</span>
-                    <br/>
-                    <span><b>19/11/2014 à 27/11/2014</b></span>
-                </div>
-            </div>
-            <div class="acomodacao">
-                <h4 class="ocupado">Quarto 13</h4>
-                <div class="dadosCliente">
-                    <span>Jorge Augusto</span>
-                    <br/>
-                    <span><b>19/11/2014 à 20/11/2014</b></span>
-                </div>
-            </div>
-            <div class="acomodacao">
-                <h4 class="desocupado">Quarto 14</h4>
-                <div class="dadosCliente">
-                    <span>Disponivel</span>
-                    <br/>
-                    <span><b></b></span>
-                </div>
-            </div>
-            <div class="acomodacao">
-                <h4 class="desocupado">Quarto 15</h4>
-                <div class="dadosCliente">
-                    <span>Disponivel</span>
-                    <br/>
-                    <span><b></b></span>
-                </div>
-            </div>
-        </div>
-        <div class="categoria" id="suite">
-            <h1>Quartos Suite</h1>
-            <div class="acomodacao">
-                <h4 class="ocupado">Suite 1</h4>
-                <div class="dadosCliente">
-                    <span>Ramon</span>
-                    <br/>
-                    <span><b>19/11/2014 à 24/11/2014</b></span>
-                </div>
-            </div>
-            <div class="acomodacao">
-                <h4 class="desocupado">Suite 2</h4>
-                <div class="dadosCliente">
-                    <span>Disponivel</span>
-                    <br/>
-                    <span><b></b></span>
-                </div>
-            </div>
-            <div class="acomodacao">
-                <h4 class="desocupado">Suite 3</h4>
-                <div class="dadosCliente">
-                    <span>Disponivel</span>
-                    <br/>
-                    <span><b></b></span>
-                </div>
-            </div>
-        </div>
+    </div>
 </body>
 
 </html>
