--- a/Prototipos/Angular Mat/mat.html
+++ b/Prototipos/Angular Mat/mat.html
@@ -4,20 +4,37 @@
 <head>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
+    <link rel="stylesheet" href="hotel.css">
+
+    <link rel="stylesheet" href="bower_components/angular-material/themes/indigo-theme.css">
+    <link rel="stylesheet" href="bower_components/angular-material/themes/green-theme.css">
 </head>
 
 <body ng-app="textFieldDemo1">
 
-    <div ng-controller="DemoController" layout="column">
-        <md-button>teste</md-button>
+
+    <div id="conteudo" ng-controller="DemoController" layout="column">
+        <div class="acomodacao" ng-repeat="acomodacao in listaAcomodacoes">
+
+            <h4 class="{{acomodacao.disponibilidade }}"><span>{{acomodacao.titulo}}</span></h2>
+            
+    <div ng-if=" acomodacao.disponibilidade=='ocupado' ">
+
+        <md-button class="md-raised md-warn " ng-click="mudar(acomodacao, true) ">Checkout</button>
+    </div>
+    <div ng-if="acomodacao.disponibilidade=='desocupado' ">
+        <md-button class="md-raised " ng-click="mudar(acomodacao, false) ">Checkin</button>
+    </div>
+    <br/>
+</div>
     </div>
 
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-aria/angular-aria.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/hammerjs/hammer.js"></script>
-    <script src="bower_components/angular-material/angular-material.js"></script>
-    <script type="text/javascript" src="mat.js"></script>
+    <script src="bower_components/angular/angular.js "></script>
+    <script src="bower_components/angular-aria/angular-aria.js "></script>
+    <script src="bower_components/angular-animate/angular-animate.js "></script>
+    <script src="bower_components/hammerjs/hammer.js "></script>
+    <script src="bower_components/angular-material/angular-material.js "></script>
+    <script type="text/javascript " src="mat.js "></script>
 
 </body>
 
