--- a/Prototipos/Angular Mat/mat.html
+++ b/Prototipos/Angular Mat/mat.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
+    <link rel="stylesheet" href="../../../bower_components/angular-material/angular-material.css">
     <link rel="stylesheet" href="hotel.css">
 
-    <link rel="stylesheet" href="bower_components/angular-material/themes/indigo-theme.css">
-    <link rel="stylesheet" href="bower_components/angular-material/themes/green-theme.css">
+    <link rel="stylesheet" href="../../../bower_components/angular-material/themes/indigo-theme.css">
+    <link rel="stylesheet" href="../../../bower_components/angular-material/themes/green-theme.css">
 </head>
 
 <body ng-app="textFieldDemo1">
@@ -29,11 +29,11 @@
 </div>
     </div>
 
-    <script src="bower_components/angular/angular.js "></script>
-    <script src="bower_components/angular-aria/angular-aria.js "></script>
-    <script src="bower_components/angular-animate/angular-animate.js "></script>
-    <script src="bower_components/hammerjs/hammer.js "></script>
-    <script src="bower_components/angular-material/angular-material.js "></script>
+    <script src="../../../bower_components/angular/angular.js "></script>
+    <script src="../../../bower_components/angular-aria/angular-aria.js "></script>
+    <script src="../../../bower_components/angular-animate/angular-animate.js "></script>
+    <script src="../../../bower_components/hammerjs/hammer.js "></script>
+    <script src="../../../bower_components/angular-material/angular-material.js "></script>
     <script type="text/javascript " src="mat.js "></script>
 
 </body>
