Testes com o protractor

--- a/Prototipos/Angular_SideNav/mat.html
+++ b/Prototipos/Angular_SideNav/mat.html
@@ -3,15 +3,13 @@
 <html>
 
 <head>
+    <title>Teste SideNav - Angular</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="../../../bower_components/angular-material/angular-material.css">
     <link rel="stylesheet" href="hotel.css">
     <link rel="stylesheet" href="personalizandoAngular.css">
     <link rel="stylesheet" href="../../../bower_components/angular-material/themes/indigo-theme.css">
     <link rel="stylesheet" href="../../../bower_components/angular-material/themes/green-theme.css">
-
-
-
 
 </head>
 
