Teste protractor pegando elemento por classe

--- a/Prototipos/TestProtractorAngular/index.html
+++ b/Prototipos/TestProtractorAngular/index.html
@@ -10,8 +10,8 @@
 
 <body ng-controller="petsCtrl">
     <div ng-repeat="cat in pets">
-        <span class="test1">{{cat.name}}</span>
-        <span class="test2">{{cat.age}}</span>
+        <span class="name">{{cat.name}}</span>
+        <span class="age">{{cat.age}}</span>
     </div>
 </body>
 
