--- a/Prototipos/Angular_SideNav/mat.html
+++ b/Prototipos/Angular_SideNav/mat.html
@@ -5,11 +5,11 @@
 <head>
     <title>Teste SideNav - Angular</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="../../../bower_components/angular-material/angular-material.css">
+    <link rel="stylesheet" href="../../bower_components/angular-material/angular-material.css">
     <link rel="stylesheet" href="hotel.css">
     <link rel="stylesheet" href="personalizandoAngular.css">
-    <link rel="stylesheet" href="../../../bower_components/angular-material/themes/indigo-theme.css">
-    <link rel="stylesheet" href="../../../bower_components/angular-material/themes/green-theme.css">
+    <link rel="stylesheet" href="../../bower_components/angular-material/themes/indigo-theme.css">
+    <link rel="stylesheet" href="../../bower_components/angular-material/themes/green-theme.css">
     
 
 </head>
@@ -54,16 +54,16 @@
         </section>
     </div>
 
-    <script src="../../../bower_components/angular/angular.js "></script>
-    <script src="../../../bower_components/angular-aria/angular-aria.js "></script>
-    <script src="../../../bower_components/angular-animate/angular-animate.js "></script>
-    <script src="../../../bower_components/hammerjs/hammer.js "></script>
-    <script src="../../../bower_components/angular-material/angular-material.js "></script>
-    <script src="../../../bower_components/angular/angular-route.js"></script>
+    <script src="../../bower_components/angular/angular.js "></script>
+    <script src="../../bower_components/angular-aria/angular-aria.js "></script>
+    <script src="../../bower_components/angular-animate/angular-animate.js "></script>
+    <script src="../../bower_components/hammerjs/hammer.js "></script>
+    <script src="../../bower_components/angular-material/angular-material.js "></script>
+    <script src="../../bower_components/angular/angular-route.js"></script>
     <script type="text/javascript " src="mat.js "></script>
     
 </body>
 
 
 </html>
-<script src="../FrameworkTest/fw/test_aux.js"></script>
+<script src="../../../QFramework/www/fw/test_aux.js"></script>
